# Copyright NVIDIA Corporation 2009-2013
# TO THE MAXIMUM EXTENT PERMITTED BY APPLICABLE LAW, THIS SOFTWARE IS PROVIDED
# *AS IS* AND NVIDIA AND ITS SUPPLIERS DISCLAIM ALL WARRANTIES, EITHER EXPRESS
# OR IMPLIED, INCLUDING, BUT NOT LIMITED TO, IMPLIED WARRANTIES OF MERCHANTABILITY
# AND FITNESS FOR A PARTICULAR PURPOSE.  IN NO EVENT SHALL NVIDIA OR ITS SUPPLIERS
# BE LIABLE FOR ANY SPECIAL, INCIDENTAL, INDIRECT, OR CONSEQUENTIAL DAMAGES
# WHATSOEVER (INCLUDING, WITHOUT LIMITATION, DAMAGES FOR LOSS OF BUSINESS PROFITS,
# BUSINESS INTERRUPTION, LOSS OF BUSINESS INFORMATION, OR ANY OTHER PECUNIARY LOSS)
# ARISING OUT OF THE USE OF OR INABILITY TO USE THIS SOFTWARE, EVEN IF NVIDIA HAS
# BEEN ADVISED OF THE POSSIBILITY OF SUCH DAMAGES

cmake_minimum_required(VERSION 2.6)

project( GLUTAnimation )

find_package(OpenGL REQUIRED )
find_package(GLUT REQUIRED )
find_package(GLEW REQUIRED )

set( SCENIX_COMMON_BASE "${SCENIX_HOME}/samples/common" )

set( GLUTANIMATION_SOURCES
  src/main.cpp
  src/AnimatedScene.cpp
)

set (GLUTANIMATION_HEADERS
  AnimatedScene.h
)

include_directories( "." )
include_directories( "inc" )
include_directories( ${GLEW_INCLUDE_DIRS} )
include_directories( ${GLUT_INCLUDE_DIR} )

add_definitions( ${GLEW_DEFINITIONS} )

add_executable( GLUTAnimation
  ${GLUTANIMATION_SOURCES}
  ${GLUTANIMATION_HEADERS}
)

target_link_libraries( GLUTAnimation
  ${OPENGL_gl_LIBRARY}
  ${GLEW_LIBRARY}
  DPSgAlgorithm
  DPSgCore
  DPSgGL
  DPSgRdrRiXGL
  DPSgIO
  DPSgUI
  DPSgUIManipulator
  DPSgUIGLUT
  DPSgGenerator
)

CopyGLEW( GLUTAnimation "${DP_BINARY_PATH}" )

set_target_properties( GLUTAnimation PROPERTIES FOLDER "Apps")


