# Copyright NVIDIA Corporation 2013
# TO THE MAXIMUM EXTENT PERMITTED BY APPLICABLE LAW, THIS SOFTWARE IS PROVIDED
# *AS IS* AND NVIDIA AND ITS SUPPLIERS DISCLAIM ALL WARRANTIES, EITHER EXPRESS
# OR IMPLIED, INCLUDING, BUT NOT LIMITED TO, IMPLIED WARRANTIES OF MERCHANTABILITY
# AND FITNESS FOR A PARTICULAR PURPOSE.  IN NO EVENT SHALL NVIDIA OR ITS SUPPLIERS
# BE LIABLE FOR ANY SPECIAL, INCIDENTAL, INDIRECT, OR CONSEQUENTIAL DAMAGES
# WHATSOEVER (INCLUDING, WITHOUT LIMITATION, DAMAGES FOR LOSS OF BUSINESS PROFITS,
# BUSINESS INTERRUPTION, LOSS OF BUSINESS INFORMATION, OR ANY OTHER PECUNIARY LOSS)
# ARISING OUT OF THE USE OF OR INABILITY TO USE THIS SOFTWARE, EVEN IF NVIDIA HAS
# BEEN ADVISED OF THE POSSIBILITY OF SUCH DAMAGES

cmake_minimum_required(VERSION 2.8)

project(MaterialExchanger)

find_package( NVTinyXML)

add_definitions(
  "-D_CRT_SECURE_NO_WARNINGS"
)

include_directories(
  ${TINYXML_INCLUDE_DIRS}
)

set (SOURCES
  exchanger.cpp
)

add_executable(MaterialExchanger
  ${SOURCES}
  ${HEADERS}
)

target_link_libraries(MaterialExchanger
  ${TINYXML_LIBRARIES}
  DPSgIO
  DP
)
if (UNIX)
  target_link_libraries(MaterialExchanger dl)
endif()

set_target_properties( MaterialExchanger PROPERTIES FOLDER "Apps")
