# Copyright (c) 2015-2016, NVIDIA CORPORATION. All rights reserved.
# TO THE MAXIMUM EXTENT PERMITTED BY APPLICABLE LAW, THIS SOFTWARE IS PROVIDED
# *AS IS* AND NVIDIA AND ITS SUPPLIERS DISCLAIM ALL WARRANTIES, EITHER EXPRESS
# OR IMPLIED, INCLUDING, BUT NOT LIMITED TO, IMPLIED WARRANTIES OF MERCHANTABILITY
# AND FITNESS FOR A PARTICULAR PURPOSE.  IN NO EVENT SHALL NVIDIA OR ITS SUPPLIERS
# BE LIABLE FOR ANY SPECIAL, INCIDENTAL, INDIRECT, OR CONSEQUENTIAL DAMAGES
# WHATSOEVER (INCLUDING, WITHOUT LIMITATION, DAMAGES FOR LOSS OF BUSINESS PROFITS,
# BUSINESS INTERRUPTION, LOSS OF BUSINESS INFORMATION, OR ANY OTHER PECUNIARY LOSS)
# ARISING OUT OF THE USE OF OR INABILITY TO USE THIS SOFTWARE, EVEN IF NVIDIA HAS
# BEEN ADVISED OF THE POSSIBILITY OF SUCH DAMAGES

cmake_minimum_required(VERSION 2.8)

project(MaterialLoaderTest)

find_package( Boost COMPONENTS program_options REQUIRED )
find_package(GLEW REQUIRED )
find_package(GLUT)

include_directories( 
  ${GLEW_INCLUDE_DIRS}
  ${GLUT_INCLUDE_DIR}
)

add_definitions( ${GLEW_DEFINITIONS} )

set (HEADERS
)

set (SOURCES
  materialLoaderTest.cpp
)

add_executable(MaterialLoaderTest
  ${SOURCES}
  ${HEADERS}
)

source_group(headers FILES ${HEADERS})
source_group(sources FILES ${SOURCES})

target_link_libraries(MaterialLoaderTest
  ${Boost_LIBRARIES}
  ${OPENGL_gl_LIBRARY}
  ${GLEW_LIBRARY}
  DPSgGenerator
  DPSgIO
  DPSgRdrRiXGL
  DPSgUIGLUT
  DPUtil
)

CopyGLEW( MaterialLoaderTest "${DP_BINARY_PATH}" )

set_target_properties( MaterialLoaderTest PROPERTIES FOLDER "Apps")
